# LinuxIPCTutorial

./: .gitignore  CMakeLists.txt  README.md
1_pipe/: pipe.cpp  utils.cpp  utils.h
2_fifo/: CMakeLists.txt  receiver.cpp  sender.cpp  utils.cpp
3_mmap/: mmap.cpp  utils.cpp  utils.h
4_shm/: CMakeLists.txt  shm.cpp
5_msg/: CMakeLists.txt  msg.h  receiver.cpp  sender.cpp  utils.cpp  utils.h
6_sem/: CMakeLists.txt  sem.cpp
7_signal/: signal.cpp
8_socket/: CMakeLists.txt  buffer_reader.cpp  buffer_reader.h  client.cpp  server.cpp  shared.cpp  shared.h
LinuxIPC/: .gitignore  CMakeLists.txt
LinuxIPC/1_pipe/: CMakeLists.txt  pipe.cpp  utils.cpp
LinuxIPC/2_fifo/: CMakeLists.txt  receiver.cpp  utils.cpp  utils.h
LinuxIPC/3_mmap/: CMakeLists.txt  mmap.cpp  utils.h
LinuxIPC/4_shm/: CMakeLists.txt  shm.cpp
LinuxIPC/5_msg/: CMakeLists.txt  receiver.cpp  sender.cpp  utils.cpp
LinuxIPC/6_sem/: sem.cpp
LinuxIPC/7_signal/: CMakeLists.txt
LinuxIPC/8_socket/: CMakeLists.txt  buffer_reader.cpp  server.cpp  shared.cpp
LinuxIPC/shared/: CMakeLists.txt  common.h  sem_manager.cpp  sem_manager.h  shm_manager.cpp  shm_manager.h
pipe/: CMakeLists.txt  main.cpp  utils.cpp  utils.h
shared/: CMakeLists.txt  common.cpp  common.h  sem_manager.cpp  sem_manager.h  shared.cpp  shared.h  shm_manager.cpp  shm_manager.h
